Fix owlCarousel nav buttons visibility on mobile

--- a/app/assets/stylesheets/_chapters-mobile.scss
+++ b/app/assets/stylesheets/_chapters-mobile.scss
@@ -1,5 +1,5 @@
 @media all and (max-device-width: $wide) {
-  .owl-wrapper .left, .owl-wrapper .right {
+  .owl-wrapper .owl-nav-round {
     display: none !important;
   }
 }
